Revision history for MetaCPAN-Client (previously MetaCPAN-API)

1.003000    -
            * Add 'releases' method to Author
            * Add proper POD fetching from module/file objects.
            * GH #1: Switch from JSON.pm to JSON::MaybeXS.
            * GH #2: Remove incorrect and unnecessary check for class names.

1.002000    24.04.14
            * Add 'not' support for complex queries
            * Add reverse_dependencies method

1.001001    15.04.14
            * Fix the reading of scroller result when 'fields' param is passed.

1.001000    09.04.14
            * Add support for nested either/all queries
            * Add tests for complex queries (two levels deep)
            * Correct documentation on complex queries
            * Update tests to work on older versions of perl

1.000001    03.04.14
            * changed Elasticsearch (deprecated) to Search::Elasticsearch (official)

1.000000    02.04.14
            ** Completely rewritten **
            MetaCPAN::API has been completely rewritten as MetaCPAN::Client.

            Other than the different name (to match MetaCPAN itself), the
            following changes had been made:
                * MetaCPAN::Client is officially part of MetaCPAN
                * Semantic Versioning (semver) scheme
                * Moo as object system
                * All entities are now objects
                * Using Elasticsearch.pm for complex queries
                * Rich syntax for nested queries (AND/OR)
                * Simple queries return entity objects
                * Complex queries return resultset objects (with iterator)
                * Support for scrolled searches
                * Inline support for ElasticSearch facets
                * Documentation, tests - all cleaned, rewritten

0.43        05.04.12
            * Add example in POD of advanced usage with cache by Kent Fredric.
              (Gist: https://gist.github.com/1291928)