@@ -1,0 +1,18 @@
+use strict;
+use warnings;
+use DDP;
+
+use MetaCPAN::Client;
+
+my $author =
+    MetaCPAN::Client->new->author('XSAWYERX');
+
+my %output = (
+    NAME    => $author->name,
+    EMAILS  => $author->email,
+    COUNTRY => $author->country,
+    CITY    => $author->city,
+    PROFILE => $author->profile,
+);
+
+p %output;
