@@ -1,0 +1,18 @@
+use strict;
+use warnings;
+use DDP;
+
+use MetaCPAN::Client;
+
+my $release =
+    MetaCPAN::Client->new->release('Moo');
+
+my %output = (
+    AUTHOR  => $release->author,
+    DATE    => $release->date,
+    STATUS  => $release->status,
+    VERSION => $release->version,
+    TESTS   => $release->tests,
+);
+
+p %output;
