@@ -5,6 +5,7 @@ Revision history for MetaCPAN-Client (previously MetaCPAN-API)
             * Add proper POD fetching from module/file objects.
             * GH #1: Switch from JSON.pm to JSON::MaybeXS.
             * GH #2: Remove incorrect and unnecessary check for class names.
+            * Add some use-case examples (examples directory)
 
 1.002000    24.04.14
             * Add 'not' support for complex queries
